@@ -1,3 +1,7 @@
+2004-03-08  Benjamin Kosnik  <bkoz@redhat.com>
+
+	* include/bits/allocator.h: Switch defaults to mt_alloc.
+
 2004-03-06  Benjamin Kosnik  <bkoz@redhat.com>
 
 	* include/ext/mt_allocator.h (_S_initialize): If
